# oauth-tester

./: .env.example  API_README.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
certs/: localhost.crt  localhost.key
docs/: OAUTH_TESTER.md  THREAD_SETUP.md  oauth-flow.md  request.md  thread_auth.md  type-checking-notes.md
docs/.obsidian/: workspace.json
src/oauth_tester/: jwt_utils.py  main.py  oauth_client.py  security.py
src/oauth_tester/api/: __init__.py  auth.py
src/oauth_tester/app/: __init__.py  exceptions.py  factory.py  logging_config.py  metrics.py
src/oauth_tester/clients/: __init__.py  oauth.py  threads_tokens.py  types.py
src/oauth_tester/middleware/: request_id.py
src/oauth_tester/routes/: __init__.py  auth.py  system.py
src/oauth_tester/settings/: __init__.py  config.py
src/oauth_tester/templates/: index.html
tests/: test_api.py  test_auth_long_token.py  test_gateway.py  test_threads_tokens.py
